// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`time period stats > processJob > processes a daily and weekly job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1730073599999,
              "sendWeeklySummary": true,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1730073599999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "📊 On <strong>2024-10-27</strong>, we had a volume of <strong>$4,000.00</strong> with <strong>$3,000.00</strong> of network fees and <strong>$2,000.00</strong> in LP fees. Also, we burned <strong>1000.00</strong> FLIP tokens.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "📊 On **2024-10-27**, we had a volume of **$4,000.00** with **$3,000.00** of network fees and **$2,000.00** in LP fees. Also, we burned **1000.00** FLIP tokens.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "💼 Top LPs for 2024-10-27 are in <strong>🥇 $1,000.00</strong> (50.00%) @cf12…7890<strong>🥈 $1,000.00</strong> (50.00%) @cf09…4321",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "💼 Top LPs for 2024-10-27 are in **🥇 $1,000.00** (50.00%) @cf12…7890**🥈 $1,000.00** (50.00%) @cf09…4321",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "📊 For the week ending <strong>2024-10-27</strong>, we had a volume of <strong>$28,000.00</strong> with <strong>$21,000.00</strong> of network fees and <strong>$14,000.00</strong> in LP fees. Also, we burned <strong>7000.00</strong> FLIP tokens.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "📊 For the week ending **2024-10-27**, we had a volume of **$28,000.00** with **$21,000.00** of network fees and **$14,000.00** in LP fees. Also, we burned **7000.00** FLIP tokens.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "💼 Top LPs for the week are in <strong>🥇 $2,000.00</strong> (49.00%) @cf12…7890<strong>🥈 $2,000.00</strong> (49.00%) @cf09…4321<strong>🥉 $2,000.00</strong> (1.00%) @cfxx…xxxx",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "💼 Top LPs for the week are in **🥇 $2,000.00** (49.00%) @cf12…7890**🥈 $2,000.00** (49.00%) @cf09…4321**🥉 $2,000.00** (1.00%) @cfxx…xxxx",
        },
        "name": "messages",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1729900799999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "📊 On <strong>2024-10-25</strong>, we had a volume of <strong>$4,000.00</strong> with <strong>$3,000.00</strong> of network fees and <strong>$2,000.00</strong> in LP fees. Also, we burned <strong>1000.00</strong> FLIP tokens.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "📊 On **2024-10-25**, we had a volume of **$4,000.00** with **$3,000.00** of network fees and **$2,000.00** in LP fees. Also, we burned **1000.00** FLIP tokens.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "💼 Top LPs for 2024-10-25 are in <strong>🥇 $1,000.00</strong> (50.00%) @cf12…7890<strong>🥈 $1,000.00</strong> (50.00%) @cf09…4321",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "💼 Top LPs for 2024-10-25 are in **🥇 $1,000.00** (50.00%) @cf12…7890**🥈 $1,000.00** (50.00%) @cf09…4321",
        },
        "name": "messages",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job without a flip burn 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1729900799999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "📊 On <strong>2024-10-25</strong>, we had a volume of <strong>$4,000.00</strong> with <strong>$3,000.00</strong> of network fees and <strong>$2,000.00</strong> in LP fees.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "📊 On **2024-10-25**, we had a volume of **$4,000.00** with **$3,000.00** of network fees and **$2,000.00** in LP fees.",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "telegram",
          "message": "",
        },
        "name": "messages",
      },
      {
        "data": {
          "channel": "discord",
          "message": "",
        },
        "name": "messages",
      },
    ],
  ],
]
`;
